# axum-supabase-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: audit.yml  ci.yml  release.yml
_examples/axum-askama-supabase-auth/: Cargo.toml
_examples/axum-askama-supabase-auth/src/: main.rs
_examples/axum-askama-supabase-auth/src/routes/: mod.rs  templates.rs
_examples/axum-askama-supabase-auth/templates/: base.html  index.html  login.html  profile.html  register.html
examples/axum/: main.rs
examples/axum/routes/: auth.rs  business.rs  mod.rs
src/: lib.rs
src/auth/: mod.rs  service.rs  types.rs
src/auth/api/: client.rs  errors.rs  mod.rs  types.rs
src/handlers/: mod.rs
src/middleware/: decoder.rs  extractor.rs  mod.rs  state.rs
supabase/: config.toml
tests/api/: helpers.rs  main.rs
tests/api/methods/: get_user.rs  health.rs  list_users.rs  logout.rs  mod.rs  refresh_token.rs  sign_in.rs  sign_up.rs
tests/setup/: docker-compose.yml  postgres.Dockerfile
tests/supabase/: helpers.rs  main.rs
