[package]
name = "axum-supabase-auth"
description = "Integrate Supabase Auth (GoTrue) with Axum"
version = "0.2.0"
edition = "2021"
authors = ["Jannis Schaefer <jannis@schaefer.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/schjan/axum-supabase-auth"
readme = "README.md"

[[example]]
name = "axum"

[lib]

[dependencies]
axum = { version = "0.7.7", default-features = false, features = ["json", "macros", "query", "form", "tracing"] }
axum-extra = { version = "0.9.4", default-features = false, features = ["query", "cookie", "typed-header", "tracing"] }
base64 = "0.22"
bon = "2.3.0"
either = { version = "1.13.0", features = ["serde"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
oauth2 = { version = "4.4", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3.36", features = ["serde"] }
tracing = "0.1"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
axum = { version = "0.7.7", features = ["default"] }
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
fake = "2.10.0"
matches = "0.1.10"
